# CSC603FINAL

./: .gitignore  README.md  cognito_login.py  devserver.py
AIPROCESSOR/: lambda_ai.py  prescriptions_model.h5  requirements.txt
CUSTOMERS/: Cargo.toml
USERS/: Cargo.toml
USERS/src/: main.rs
java-frontend/: build.gradle
java-frontend/src/main/java/frontend/: ApiService.java
java-frontend/src/test/java/frontend/: ApiServiceTest.java
swagger/: api.yaml  genswagger.sh  swagger.py
swagger/static/: index.html
tests/: .env.sample  api_test.py  requirements.txt
web-frontend/: .env.development  bun.lockb  next.config.mjs  package-lock.json  package.json  tsconfig.json
web-frontend/app/: globals.css  index.tsx  layout.tsx  middleware.ts  page.tsx
web-frontend/app/customers/: page.tsx
web-frontend/app/login/: page.tsx
web-frontend/app/products/: page.tsx
web-frontend/components/: ConditionCard.tsx  CustomerAdd.tsx  CustomerInfo.tsx  CustomerLookup.tsx  Customers.tsx  Dashboard.tsx  FileUploadModal.tsx  Footer.tsx  Login.tsx  LoginForm.tsx  MFAForm.tsx  MFASetupForm.tsx  Navbar.tsx  PasswordChangeForm.tsx  Products.tsx
web-frontend/hooks/: use-cookies.ts
web-frontend/layouts/: MainLayout.tsx
web-frontend/services/: ApiService.ts  LoginService.ts
web-frontend/types/: CustomerData.ts  CustomerRequest.ts  LoginResponseType.ts  ResponseType.ts
