[package]
name = "USERS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.15.1"
lambda_runtime = "0.13.0"
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
http = "1.1.0"
serde = "1.0"
aws-sdk-secretsmanager = "1.48.0"
aws-config = "1.5.7"
aws_secretsmanager_caching = "1.0.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
aws-sigv4 = "1.2.4"
url = "2.5.2"
aws-credential-types = "1.2.1"
runtime-tokio = "0.0.0"
openssl = { version = "0.10.66", features = ["vendored"] }
aws-sdk-rds = "1.59.0"
sha2 = "0.10.8"
